chore: code cleanup, remove redundant and obsolete codes and simplify some method calls. (#190)
* chore: code cleanup, remove redundant and obsolete codes and simplify some method calls.

Signed-off-by: Chao Wang <chaowan@redhat.com>